--- a/styles/lasagna.css
+++ b/styles/lasagna.css
@@ -27,4 +27,40 @@ img {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+  margin: 2rem 0;
+}
+
+main {
+  padding: 0 8rem 8rem;
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 3rem;
+}
+
+li::marker {
+  color: #ffeacf;
+}
+
+h1 {
+  margin-top: 5rem;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.ingredients {
+  flex: 1;
+  list-style: none;
+}
+
+.directions {
+  flex: 1;
+}
+
+.directions li,
+.ingredients li {
+  margin: 0 0 1rem 0;
 }
