--- a/styles/lasagna.css
+++ b/styles/lasagna.css
@@ -31,7 +31,7 @@ img {
 }
 
 main {
-  padding: 0 8rem 8rem;
+  padding: 0 8rem;
   max-width: 100%;
   height: 100%;
   display: flex;
@@ -49,6 +49,15 @@ h1 {
 h2 {
   text-align: center;
   margin-bottom: 2rem;
+}
+
+footer {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+}
+
+footer a {
+  color: red;
 }
 
 .ingredients {
