--- a/styles/lasagna.css
+++ b/styles/lasagna.css
@@ -38,6 +38,10 @@ main {
   gap: 3rem;
 }
 
+li {
+  font-size: 1rem;
+}
+
 li::marker {
   color: #ffeacf;
 }
@@ -49,6 +53,10 @@ h1 {
 h2 {
   text-align: center;
   margin-bottom: 2rem;
+}
+
+strong {
+  color: red;
 }
 
 footer {
