--- a/styles/lasagna.css
+++ b/styles/lasagna.css
@@ -10,7 +10,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(../img/lower_food_bg.jpg);
+  background-image: url(../img/lower-food-bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
